--- a/cgi-bin/cpp_index.html
+++ b/cgi-bin/cpp_index.html
@@ -1,28 +1,28 @@
 <html>
 <body>
-<h1>CGI Test</h1>
+<h2>CGI Test</h2>
 
-<a href="cpp_99_listenv.cgi">List ENV</a><br/><br/>
+<a href="cpp_99_listenv.cgi">1. List ENV</a>
 
-<a href="cpp_00_cplusplus.cgi">Hello World</a><br/><br/>
+<a href="cpp_00_cplusplus.cgi">2. Hello World</a><br/><br/>
 
 <a href="cpp_01_get.cgi?first_name=ZARA&last_name=ALI">Have a attention to URL</a><br/>
 
-<h2>method = get</h2>
+<h3>method = get</h3>
 <form action="cpp_01_get.cgi" method="get">
-first_name : <input type="text" name="first_name"><br/>
+first_name : <input type="text" name="first_name">
 last_name : <input type="text" name="last_name" />
 <input type="submit" value="Submit" />
 </form>
 
-<h2>method = post & Submit form & InputText</h2>
+<h3>method = post & Submit form & InputText</h3>
 <form action="cpp_01_get.cgi" method="post">
-first_name : <input type="text" name="first_name"><br/>
+first_name : <input type="text" name="first_name">
 last_name : <input type="text" name="last_name" />
 <input type="submit" value="Submit" />
 </form>
 
-<h2>CheckBox</h2>
+<h3>CheckBox</h3>
 <form action="cpp_02_checkbox.cgi" 
          method="POST" 
          target="_blank">
@@ -31,7 +31,7 @@ last_name : <input type="text" name="last_name" />
 <input type="submit" value="Choose" />
 </form>
 
-<h2>RadioButton</h2>
+<h3>RadioButton</h3>
 <form action="cpp_03_radiobutton.cgi" 
          method="post" 
          target="_blank">
@@ -41,7 +41,7 @@ last_name : <input type="text" name="last_name" />
 <input type="submit" value="Choose" />
 </form>
 
-<h2>TextArea</h2>
+<h3>TextArea</h3>
 <form action="cpp_04_textarea.cgi" 
          method="post" 
          target="_blank">
@@ -51,7 +51,7 @@ please input text here ......
 <input type="submit" value="Submit" />
 </form>
 
-<h2>Dropdown</h2>
+<h3>Dropdown</h3>
 <form action="cpp_05_dropdown.cgi" 
                        method="post" target="_blank">
 <select name="dropdown">
@@ -61,11 +61,11 @@ please input text here ......
 <input type="submit" value="Submit"/>
 </form>
 
-<h2>Set Cookies</h2>
+<h3>Cookies</h3>
+<a href="cpp_20_setcookies.cgi">1. Set </a><br/>
+<a href="cpp_21_getcookies.cgi">2. Get</a><br/>
 
-<h2>Get Cookies</h2>
-
-<h2>Upload</h2>
+<h3>Upload</h3>
    <form enctype="multipart/form-data" 
             action="cpp_30_uploadfile.cgi" 
             method="post">
